# Nowcasting

./: .gitignore  MANIFEST.in  README.md  analysis.py  analysis_visualizations.ipynb  create_dataset.py  create_test_dataset.py  hpo.py  hpo.sh  main.py  pyproject.toml  pytest.ini  rainymotion_test.py  requirements.txt  requirements_dev.txt  setup.cfg  slurm_example.txt  unet_conv3d.py
notebooks/: alex.ipynb  hpo.ipynb  hpo_analysis.ipynb  reload_model.ipynb  res1.ipynb  visual_analysis.ipynb
rainymotion/: __init__.py  ipol.py  models.py  utils.py
src/nowcasting/: __init__.py  placeholder.py  pysteps_.py  slurm.sh  unet.py  unet_conv3d.py  utils.py
tests/: test_placeholder.py  test_utils.py
