[build-system]
requires = ["setuptools>=61.0", "wheel>=0.37.1", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name="nowcasting"
dynamic = ["version", "description", "classifiers", "readme"]

[tool.setuptools_scm]
write_to = "src/nowcasting/_version.py"
local_scheme = "no-local-version"
