[metadata]
name = nowcasting
description = nowcasting
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
install_requires = file: requirements.txt

[options.packages.find]
where = src